--- a/Labo_11_10/Module _requests.ipynb
+++ b/Labo_11_10/Module _requests.ipynb
@@ -17,6 +17,115 @@
    "source": [
     "import requests\n",
     "\n",
+    "\n",
+    "requests.get(url, params) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 1\n",
+      "title : sunt aut facere repellat provident occaecati excepturi optio reprehenderit\n",
+      "body : quia et suscipit\n",
+      "suscipit recusandae consequuntur expedita et cum\n",
+      "reprehenderit molestiae ut ut quas totam\n",
+      "nostrum rerum est autem sunt rem eveniet architecto\n",
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 2\n",
+      "title : qui est esse\n",
+      "body : est rerum tempore vitae\n",
+      "sequi sint nihil reprehenderit dolor beatae ea dolores neque\n",
+      "fugiat blanditiis voluptate porro vel nihil molestiae ut reiciendis\n",
+      "qui aperiam non debitis possimus qui neque nisi nulla\n",
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 3\n",
+      "title : ea molestias quasi exercitationem repellat qui ipsa sit aut\n",
+      "body : et iusto sed quo iure\n",
+      "voluptatem occaecati omnis eligendi aut ad\n",
+      "voluptatem doloribus vel accusantium quis pariatur\n",
+      "molestiae porro eius odio et labore et velit aut\n",
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 4\n",
+      "title : eum et est occaecati\n",
+      "body : ullam et saepe reiciendis voluptatem adipisci\n",
+      "sit amet autem assumenda provident rerum culpa\n",
+      "quis hic commodi nesciunt rem tenetur doloremque ipsam iure\n",
+      "quis sunt voluptatem rerum illo velit\n",
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 5\n",
+      "title : nesciunt quas odio\n",
+      "body : repudiandae veniam quaerat sunt sed\n",
+      "alias aut fugiat sit autem sed est\n",
+      "voluptatem omnis possimus esse voluptatibus quis\n",
+      "est aut tenetur dolor neque\n",
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 6\n",
+      "title : dolorem eum magni eos aperiam quia\n",
+      "body : ut aspernatur corporis harum nihil quis provident sequi\n",
+      "mollitia nobis aliquid molestiae\n",
+      "perspiciatis et ea nemo ab reprehenderit accusantium quas\n",
+      "voluptate dolores velit et doloremque molestiae\n",
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 7\n",
+      "title : magnam facilis autem\n",
+      "body : dolore placeat quibusdam ea quo vitae\n",
+      "magni quis enim qui quis quo nemo aut saepe\n",
+      "quidem repellat excepturi ut quia\n",
+      "sunt ut sequi eos ea sed quas\n",
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 8\n",
+      "title : dolorem dolore est ipsam\n",
+      "body : dignissimos aperiam dolorem qui eum\n",
+      "facilis quibusdam animi sint suscipit qui sint possimus cum\n",
+      "quaerat magni maiores excepturi\n",
+      "ipsam ut commodi dolor voluptatum modi aut vitae\n",
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 9\n",
+      "title : nesciunt iure omnis dolorem tempora et accusantium\n",
+      "body : consectetur animi nesciunt iure dolore\n",
+      "enim quia ad\n",
+      "veniam autem ut quam aut nobis\n",
+      "et est aut quod aut provident voluptas autem voluptas\n",
+      "\n",
+      "\n",
+      "userId : 1\n",
+      "id : 10\n",
+      "title : optio molestias id quia eum\n",
+      "body : quo et expedita modi cum officia vel magni\n",
+      "doloribus qui repudiandae\n",
+      "vero nisi sit\n",
+      "quos veniam quod sed accusamus veritatis error\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
     "url      = 'https://jsonplaceholder.typicode.com/posts'  # Url utile pour faire des tests\n",
     "params   = {'userId':1}                                  # Paramètres sous forme de dictionnaire, ici id=1\n",
     "req      = requests.get(url, params)                     # Ici méthode get(), mais on peut aussi utiliser post()\n",
@@ -31,11 +140,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Résultats retournée :\n",
+      " LOCUS       AB123456                 563 bp    DNA     linear   BCT 23-OCT-2003\n",
+      "DEFINITION  Verrucosispora sp. 431C09 gene for 16S rRNA, partial sequence.\n",
+      "ACCESSION   AB123456\n",
+      "VERSION     AB123456.1\n",
+      "KEYWORDS    .\n",
+      "SOURCE      Verrucosispora sp. 431C09\n",
+      "  ORGANISM  Verrucosispora sp. 431C09\n",
+      "            Bacteria; Actinobacteria; Micromonosporales; Micromonosporaceae;\n",
+      "            Verrucosispora; unclassified Verrucosispora.\n",
+      "REFERENCE   1\n",
+      "  AUTHORS   Muramatsu,H., Shahab,N., Tsurumi,Y. and Hino,M.\n",
+      "  TITLE     A comparative study between Malaysian and Japanese actinomycets\n",
+      "  JOURNAL   Unpublished\n",
+      "REFERENCE   2  (bases 1 to 563)\n",
+      "  AUTHORS   Muramatsu,H., Shahab,N.B., Tsurumi,Y. and Hino,M.\n",
+      "  TITLE     Direct Submission\n",
+      "  JOURNAL   Submitted (15-OCT-2003) Hideyuki Muramatsu, Fujisawa Pharmaceutical\n",
+      "            Co., Ltd., Exploratory Research Laboratories; Tokodai 5-2-3,\n",
+      "            Tsukuba, Ibaraki 300-2698, Japan\n",
+      "            (E-mail:hideyuki_muramatu@po.fujisawa.co.jp, Tel:81-29-847-8611,\n",
+      "            Fax:81-29-847-8313)\n",
+      "FEATURES             Location/Qualifiers\n",
+      "     source          1..563\n",
+      "                     /organism=\"Verrucosispora sp. 431C09\"\n",
+      "                     /mol_type=\"genomic DNA\"\n",
+      "                     /strain=\"431C09\"\n",
+      "                     /db_xref=\"taxon:250264\"\n",
+      "                     /note=\"Malaysian soil actinomycetes\"\n",
+      "     rRNA            <1..>563\n",
+      "                     /product=\"16S ribosomal RNA\"\n",
+      "ORIGIN      \n",
+      "        1 gagcggcgaa cgggtgagta acacgtgagc aacctgccct aggctttggg ataaccctcg\n",
+      "       61 gaaacggggg ctaataccga ataggacctc ctgtcgcatg gtggggggtg gaaagttttt\n",
+      "      121 cggcctggga tgggctcgcg gcctatcagc ttgttggtgg ggtgatggcc taccaaggcg\n",
+      "      181 acgacgggta gccggcctga gagggcgacc ggccacactg ggactgagac acggcccaga\n",
+      "      241 ctcctacggg aggcagcagt ggggaatatt gcacaatggg cggaagcctg atgcagcgac\n",
+      "      301 gccgcgtgag ggatgacggc cttcgggttg taaacctctt tcagcaggga cgaagcgcaa\n",
+      "      361 gtgacggtac ctgcagaaga agcgccggcc aactacgtgc cagcagccgc ggtaagacgt\n",
+      "      421 agggcgcgag cgttgtccgg atttattggg cgtaaagagc tcgtaggcgg cttgtcgcgt\n",
+      "      481 cgactgtgaa aacccgcagc tcaactgcgg gcctgcagtc gatacgggca ggctagagtt\n",
+      "      541 cggtagggga gactggaatt cct\n",
+      "//\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "def ESearch(db, id): \n",
+    "def x(db, id): \n",
     "\n",
     "    url    = \"https://eutils.ncbi.nlm.nih.gov/entrez/eutils/efetch.fcgi\"\n",
     "    params = {\n",
@@ -48,7 +210,7 @@
     "\n",
     "# Appel de la fonction\n",
     "db, id = 'nuccore', 'AB123456'\n",
-    "req      = ESearch(db, id)\n",
+    "req      = x(db, id)\n",
     "results  = req.text\n",
     "req.close()\n",
     "\n",
