--- a/Labo_09_22/02_Variables.ipynb
+++ b/Labo_09_22/02_Variables.ipynb
@@ -333,8 +333,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Les ensembles sont comme des listes, mais le même élément ne peut s'y retrouver plus d'une fois.\n",
-    "# On utilise des 'curly brackets' {} pour définir les ensembles. Attention à la confusion avec les dictionnaires!\n",
+    "# Les ensembles sont comme des dictionnaires, mais le même élément qui s'y trouvent ne sont pas associés à des clés.\n",
+    "# Le concept général des ensemble est celui de présence/absence.\n",
+    "# On utilise également des 'curly brackets' {} pour définir les ensembles.\n",
     "\n",
     "x = {}\n",
     "print(type(x))\n",
