--- a/Labo_09_22/02_Variables.ipynb
+++ b/Labo_09_22/02_Variables.ipynb
@@ -333,7 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Les ensembles sont comme des dictionnaires, mais le même élément qui s'y trouvent ne sont pas associés à des clés.\n",
+    "# Les ensembles sont comme des dictionnaires, mais les éléments qui s'y trouvent ne sont pas associés à des clés.\n",
     "# Le concept général des ensemble est celui de présence/absence.\n",
     "# On utilise également des 'curly brackets' {} pour définir les ensembles.\n",
     "\n",
